--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "dependencies": {
+    "express": "^4.18.2",
+    "mysql2": "^3.6.0",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2",
+    "log4js": "^6.9.1",
+    "uuid": "^9.0.0"
+  },
   "scripts": {
+    "start": "node index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Michael",
   "license": "ISC",
   "type": "commonjs"
 }
