--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,13 @@
 FROM node:22-alpine AS builder
 WORKDIR /app
 COPY package*.json .
-RUN npm ci --only=production
+RUN npm install
 
 FROM node:22-alpine AS runner
 WORKDIR /app
 ENV NODE_ENV=production
 COPY --from=builder /app/node_modules ./node_modules
 COPY . .
-USER node
+# USER node
 EXPOSE 5000
 CMD ["npm", "start"]
