--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
     "log4js": "^6.9.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "kafkajs": "^2.2.4"
   },
   "scripts": {
     "start": "node index.js"
